--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/img1.jpg",
               "src/assets"
             ],
             "styles": [
@@ -89,7 +89,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
+              "src/objective-lens-icon-with-six-rainbow-colors-vector.jpg",
               "src/assets"
             ],
             "styles": [
@@ -100,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "bfe8010b-cc18-4c77-af70-a47dc26cacb6"
   }
 }
